<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/regular_margin"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <com.hugomatilla.audioplayerview.AudioPlayerView
        android:id="@+id/audioPlayer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/regular_margin"
        android:background="@drawable/circle_fill"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_x2"
        app:loadingText="@string/loading"
        app:playText="@string/play"
        app:stopText="@string/stop"
        app:useIcons="true" />

    <include layout="@layout/content_generic_row" />
</LinearLayout>