<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s_dark_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algorithmers.android.algoapp.AlgoMainActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">


        <com.algorithmers.android.algoapp.widget.AlgoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#"
            android:textColor="#f17d18"
            android:textSize="@dimen/font_x4"
            android:textStyle="bold" />

        <com.algorithmers.android.algoapp.widget.AlgoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_x4" />
    </LinearLayout>


    <com.algorithmers.android.algoapp.widget.AlgoTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="5dp"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">


        <com.algorithmers.android.algoapp.widget.AlgoEditText
            android:id="@+id/editText"
            style="@style/AlgoEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners_white_fill"
            android:hint="ادخل البريد الإلكتورني"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/font_large" />


        <com.algorithmers.android.algoapp.widget.AlgoEditText
            android:id="@+id/editText2"
            style="@style/AlgoEt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners_white_fill"
            android:hint="ادخل كلمة المرور"
            android:inputType="textPassword"
            android:textSize="@dimen/font_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.algorithmers.android.algoapp.widget.AlgoButton
                android:id="@+id/btnActMainSignIn"
                style="@style/AlogBtn"
                android:onClick="nav"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_fill"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_x2"
                android:textStyle="bold" />

            <com.algorithmers.android.algoapp.widget.AlgoButton
                android:id="@+id/btnActMainForgetPassword"
                style="@style/AlogBtn"
                android:onClick="nav"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners_fill"
                android:text="نسيب كلمة المرور"
                android:textColor="@color/white"
                android:textSize="@dimen/font_x2"
                android:textStyle="bold" />

        </LinearLayout>


        <com.algorithmers.android.algoapp.widget.AlgoButton
            android:id="@+id/btnActMainSignUp"
            style="@style/AlogBtn"
            android:onClick="nav"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corners_fill"
            android:text="تسجيل حساب جديد"
            android:textColor="@color/white"
            android:textSize="@dimen/font_x2"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
